# Ingest

./: Cargo.toml  README.md
config/: binance.toml  example.toml
crates/agents/: Cargo.toml
crates/agents/specs/: binance_spot.toml
crates/agents/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: main.rs
crates/ingestd/: Cargo.toml
crates/ingestd/src/: main.rs
crates/ops/: Cargo.toml
crates/ops/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
golden/: binance_spot_trades.jsonl
