[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[lib]
name = "agents"
path = "src/lib.rs"

[dependencies]
ingest-core = { path = "../core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time" ] }
chrono = { version = "0.4", features = ["serde", "clock" ] }
serde_json = "1"
toml = "0.8"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "1"
features = ["full"]

[features]
macros = []
