[package]
name = "ops"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prometheus = "0.13"
api = { path = "../api" }
ingest-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-stream = "0.3"
serde_json = "1"
futures-core = "0.3"
